--- a/connectors/java/pom.xml
+++ b/connectors/java/pom.xml
@@ -16,17 +16,17 @@
         <dependency>
             <groupId>org.apache.qpid</groupId>
             <artifactId>qpid-amqp-1-0-client-jms</artifactId>
-            <version>0.26-SNAPSHOT</version>
+            <version>0.26</version>
         </dependency>
         <dependency>
             <groupId>org.apache.qpid</groupId>
             <artifactId>qpid-amqp-1-0-client</artifactId>
-            <version>0.26-SNAPSHOT</version>
+            <version>0.26</version>
         </dependency>
         <dependency>
             <groupId>org.apache.qpid</groupId>
             <artifactId>qpid-amqp-1-0-common</artifactId>
-            <version>0.26-SNAPSHOT</version>
+            <version>0.26</version>
         </dependency>
         <dependency>
             <groupId>org.apache.geronimo.specs</groupId>
@@ -41,8 +41,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
         </plugins>
