--- a/dispatcher/pom.xml
+++ b/dispatcher/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.gathe.integration</groupId>
     <artifactId>dispatcher</artifactId>
-    <version>0.3</version>
+    <version>0.5</version>
     <properties>
         <!-- Adapt this to a version found on
              http://central.maven.org/maven2/org/eclipse/jetty/jetty-maven-plugin/
@@ -22,17 +22,17 @@
         <dependency>
             <groupId>org.apache.qpid</groupId>
             <artifactId>qpid-amqp-1-0-client-jms</artifactId>
-            <version>0.26-SNAPSHOT</version>
+            <version>0.28</version>
         </dependency>
         <dependency>
             <groupId>org.apache.qpid</groupId>
             <artifactId>qpid-amqp-1-0-client</artifactId>
-            <version>0.26-SNAPSHOT</version>
+            <version>0.28</version>
         </dependency>
         <dependency>
             <groupId>org.apache.qpid</groupId>
             <artifactId>qpid-amqp-1-0-common</artifactId>
-            <version>0.26-SNAPSHOT</version>
+            <version>0.28</version>
         </dependency>
         <dependency>
             <groupId>org.apache.geronimo.specs</groupId>
@@ -62,7 +62,11 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.1</version>
                 <executions>
-                    <execution><goals><goal>java</goal></goals></execution>
+                    <execution>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
                 </executions>
                 <configuration>
                     <mainClass>org.gathe.integration.Main</mainClass>
@@ -73,8 +77,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <!--	    <plugin>
